# Internship-exercise

./: CMakeLists.txt  main.cpp
headers/: aggregator.h  first_degree.h  polynomial.h  second_degree.h  third_degree.h  wrappers.h
sources/: aggregator.cpp  first_degree.cpp  second_degree.cpp  third_degree.cpp  wrappers.cpp
